--- a/services.html
+++ b/services.html
@@ -33,97 +33,130 @@
 
 
     <header data-add-bg="bg-white" class="header bg- js-header bg-white shadow-5 is-sticky " data-x="header"
-    data-x-toggle="is-menu-opened">
-    <div data-anim="fade" class="header__container px-30 sm:px-20 is-in-view">
-      <div data-anim="fade" class="header__container px-0 sm:px-20 is-in-view">
-        <div class="row justify-between items-center">
+      data-x-toggle="is-menu-opened">
+      <div data-anim="fade" class="header__container px-30 sm:px-20 is-in-view">
+        <div data-anim="fade" class="header__container px-0 sm:px-20 is-in-view">
+          <div class="row justify-between items-center">
             <div class="col-auto">
               <a href="index.html" class="header-logo mr-20 pt-0" data-x="header-logo" data-x-toggle="is-logo-dark"
-              style="padding-top: 10px;">
-              <img src="img/general/logo horizontal.svg" alt="logo icon">
-              <img src="img/general/logo horizontal.svg" alt="logo icon">
-            </a>
+                style="padding-top: 10px;">
+                <img src="img/general/logo horizontal.svg" alt="logo icon">
+                <img src="img/general/logo horizontal.svg" alt="logo icon">
+              </a>
 
             </div>
-          <div class="col-auto">
-            <div class="d-flex items-center">
-          
+            <div class="col-auto">
+              <div class="d-flex items-center">
 
-              <div class="header-menu " data-x="mobile-menu" data-x-toggle="is-menu-active">
-                <div class="mobile-overlay"></div>
 
-                <div class="header-menu__content">
-                  <div class="mobile-bg js-mobile-bg"></div>
+                <div class="header-menu " data-x="mobile-menu" data-x-toggle="is-menu-active">
+                  <div class="mobile-overlay"></div>
 
-                  <div class="menu js-navList">
-                    <ul class="menu__nav text-dark-1 fw-700 -is-active">
-                      <li>
-                        <a href="./index.html">
-                          الصفحة الرئيسية
-                        </a>
-                      </li>
-                      <li>
-                        <a href="./category.html">
-                          رحلات العمرة
-                        </a>
-                      </li>
-                      <li>
-                        <a href="./category.html">
-                          رحلات الحج
-                        </a>
-                      </li>
-                      <li>
-                        <a href="./services.html">
-                          الخدمات
-                        </a>
-                      </li>
-                      <li>
-                        <a href="./about.html">
-                          من نحن
-                        </a>
-                      </li>
-                      <li>
-                        <a href="contact-us.html">اتصل بنا</a>
-                      </li>
-                    </ul>
+                  <div class="header-menu__content">
+                    <div class="mobile-bg js-mobile-bg"></div>
+
+                    <div class="menu js-navList">
+                      <ul class="menu__nav text-dark-1 fw-700 -is-active">
+                        <li>
+                          <a href="./index.html">
+                            الصفحة الرئيسية
+                          </a>
+                        </li>
+                        <li>
+                          <a href="./category.html">
+                            رحلات العمرة
+                          </a>
+                        </li>
+                        <li>
+                          <a href="./category.html">
+                            رحلات الحج
+                          </a>
+                        </li>
+                        <li>
+                          <a href="./services.html">
+                            الخدمات
+                          </a>
+                        </li>
+                        <li>
+                          <a href="./gallery.html">
+                            المعرض
+                          </a>
+                        </li>
+                        <li class="menu-item-has-children">
+                          <a data-barba="">
+                            <span class="ml-10">مزارات</span>
+                            <i class="icon icon-chevron-sm-down"></i>
+                          </a>
+
+                          <ul class="subnav">
+                            <li class="subnav__backBtn js-nav-list-back">
+                              <a href="#"><i class="icon icon-chevron-sm-down"></i> </a>
+                            </li>
+                            <li><a href="./destination.html">مكة المكرمة</a></li>
+                            <li><a href="./destination.html">المدينة المنورة</a></li>
+                          </ul>
+                        </li>
+                        <li class="menu-item-has-children">
+                          <a data-barba="">
+                            <span class="ml-10">المناسك</span>
+                            <i class="icon icon-chevron-sm-down"></i>
+                          </a>
+
+                          <ul class="subnav">
+                            <li class="subnav__backBtn js-nav-list-back">
+                              <a href="#"><i class="icon icon-chevron-sm-down"></i> </a>
+                            </li>
+                            <li><a href="./destination-dt.html"> الحج</a></li>
+                            <li><a href="./destination-dt.html"> العمرة</a></li>
+                          </ul>
+                        </li>
+                        <li>
+                          <a href="./about.html">
+                            من نحن
+                          </a>
+                        </li>
+                        <li>
+                          <a href="contact-us.html">اتصل بنا</a>
+                        </li>
+                      </ul>
+                    </div>
+
+
+                    <div class="mobile-footer px-20 py-20 border-top-light js-mobile-footer">
+                    </div>
                   </div>
+                </div>
+
+              </div>
+            </div>
 
 
-                  <div class="mobile-footer px-20 py-20 border-top-light js-mobile-footer">
-                  </div>
+            <div class="col-auto d-flex lang-ct justify-center">
+
+              <a href="tel:12345"
+                class="button  px-1  fw-400 text-14 border-white call-us-btn --white 0  bg-white rounded-4 px-2 ml-3">اتصل
+                بنا <svg class="m-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z">
+                  </path>
+                </svg>
+              </a>
+
+              <div class="d-none xl:d-flex x-gap-20 mr-4 col-auto items-center   bg-white rounded-4 px-1"
+                data-x="header-mobile-icons" data-x-toggle="bg-white rounded-4 px-2">
+                <div>
+                  <button class="d-flex items-center icon-menu text-inherit text-20"
+                    data-x-click="html, header, header-logo, header-mobile-icons, mobile-menu">
+                  </button>
                 </div>
               </div>
 
             </div>
           </div>
-
-
-          <div class="col-auto d-flex lang-ct justify-center">
-
-            <a href="tel:12345"
-              class="button  px-1  fw-400 text-14 border-white call-us-btn --white 0  bg-white rounded-4 px-2 ml-3">اتصل
-              بنا <svg class="m-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                viewBox="0 0 16 16">
-                <path
-                  d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z">
-                </path>
-              </svg>
-            </a>
-
-            <div class="d-none xl:d-flex x-gap-20 mr-4 col-auto items-center   bg-white rounded-4 px-1"
-              data-x="header-mobile-icons" data-x-toggle="bg-white rounded-4 px-2">
-              <div>
-                <button class="d-flex items-center icon-menu text-inherit text-20"
-                  data-x-click="html, header, header-logo, header-mobile-icons, mobile-menu">
-                </button>
-              </div>
-            </div>
-
-          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
     <section data-anim="fade" class="d-flex bg-light-2 items-center py-15 border-top-light is-in-view">
       <div class="container">
@@ -176,32 +209,35 @@
               <div class="tourTypeCard__content text-center pt-60 pb-24 px-30">
                 <img src="./img/featureIcons/2/22.svg" alt="">
                 <h4 class="text-dark-1 text-18 fw-500 mt-50 md:mt-30">Wildlife Tour</h4>
-                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$  ajj and Umrah packages ajj and Umrah packages ajj and Umrah packages </p>
+                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$ ajj and Umrah packages ajj and Umrah
+                  packages ajj and Umrah packages </p>
               </div>
             </a>
 
           </div>
 
-          <div  class="col-md-4">
+          <div class="col-md-4">
 
             <a class="tourTypeCard -type-1 d-block rounded-4 bg-blue-1-05 rounded-4">
               <div class="tourTypeCard__content text-center pt-60 pb-24 px-30">
                 <img src="./img/featureIcons/2/22.svg" alt="">
                 <h4 class="text-dark-1 text-18 fw-500 mt-50 md:mt-30">Wildlife Tour</h4>
-                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$  ajj and Umrah packages ajj and Umrah packages ajj and Umrah packages </p>
+                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$ ajj and Umrah packages ajj and Umrah
+                  packages ajj and Umrah packages </p>
               </div>
             </a>
 
 
           </div>
 
-          <div  class="col-md-4">
+          <div class="col-md-4">
 
             <a class="tourTypeCard -type-1 d-block rounded-4 bg-blue-1-05 rounded-4">
               <div class="tourTypeCard__content text-center pt-60 pb-24 px-30">
                 <img src="./img/featureIcons/2/22.svg" alt="">
                 <h4 class="text-dark-1 text-18 fw-500 mt-50 md:mt-30">Wildlife Tour</h4>
-                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$  ajj and Umrah packages ajj and Umrah packages ajj and Umrah packages </p>
+                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$ ajj and Umrah packages ajj and Umrah
+                  packages ajj and Umrah packages </p>
               </div>
             </a>
 
@@ -213,7 +249,8 @@
               <div class="tourTypeCard__content text-center pt-60 pb-24 px-30">
                 <img src="./img/featureIcons/2/22.svg" alt="">
                 <h4 class="text-dark-1 text-18 fw-500 mt-50 md:mt-30">Wildlife Tour</h4>
-                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$  ajj and Umrah packages ajj and Umrah packages ajj and Umrah packages </p>
+                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$ ajj and Umrah packages ajj and Umrah
+                  packages ajj and Umrah packages </p>
               </div>
             </a>
 
@@ -224,19 +261,21 @@
               <div class="tourTypeCard__content text-center pt-60 pb-24 px-30">
                 <img src="./img/featureIcons/2/22.svg" alt="">
                 <h4 class="text-dark-1 text-18 fw-500 mt-50 md:mt-30">Wildlife Tour</h4>
-                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$  ajj and Umrah packages ajj and Umrah packages ajj and Umrah packages </p>
+                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$ ajj and Umrah packages ajj and Umrah
+                  packages ajj and Umrah packages </p>
               </div>
             </a>
 
           </div>
 
-          <div  class="col-md-4">
+          <div class="col-md-4">
 
             <a class="tourTypeCard -type-1 d-block rounded-4 bg-blue-1-05 rounded-4">
               <div class="tourTypeCard__content text-center pt-60 pb-24 px-30">
                 <img src="./img/featureIcons/2/22.svg" alt="">
                 <h4 class="text-dark-1 text-18 fw-500 mt-50 md:mt-30">Wildlife Tour</h4>
-                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$  ajj and Umrah packages ajj and Umrah packages ajj and Umrah packages </p>
+                <p class="text-light-1 lh-14 text-14 mt-5">5 Tours From 550$ ajj and Umrah packages ajj and Umrah
+                  packages ajj and Umrah packages </p>
               </div>
             </a>
 
