--- a/services.html
+++ b/services.html
@@ -62,16 +62,29 @@
                             الصفحة الرئيسية
                           </a>
                         </li>
-                        <li>
-                          <a href="./category.html">
-                            رحلات العمرة
+                        <li class="menu-item-has-children">
+                          <a data-barba="">
+                            <span class="ml-10">الحج والعمرة</span>
+                            <i class="icon icon-chevron-sm-down"></i>
                           </a>
+
+                          <ul class="subnav">
+                            <li class="subnav__backBtn js-nav-list-back">
+                              <a href="#"><i class="icon icon-chevron-sm-down"></i> </a>
+                            </li>
+                            <li>
+                              <a href="./category.html">
+                                رحلات العمرة
+                              </a>
+                            </li>
+                            <li>
+                              <a href="./category.html">
+                                رحلات الحج
+                              </a>
+                            </li>
+                          </ul>
                         </li>
-                        <li>
-                          <a href="./category.html">
-                            رحلات الحج
-                          </a>
-                        </li>
+
                         <li>
                           <a href="./services.html">
                             الخدمات
